--- a/lekcii/probtheory.tex
+++ b/lekcii/probtheory.tex
@@ -18,7 +18,7 @@
      colorlinks=true,
      linkcolor=cyan,
      filecolor=cyan,
-     citecolor=black,      
+     citecolor=cyan,      
      urlcolor=cyan,
      }
 \usepackage{fancyhdr}
@@ -113,6 +113,10 @@
     $\PP$ - вероятность $A\Rightarrow \PP(A)$ - вероятность события $A$.
 \end{defn}
 
+\begin{defn}
+    Вся же тройка $(\Omega, \FF, \PP)$ называется \hypertarget{n1}{\textcolor{cyan}{\textit{вероятностным пространством}}}.
+\end{defn}
+
 Для вероятностей существует несколько аксиом: 
 
 \begin{itemize}
@@ -137,16 +141,18 @@
 
 \begin{exl}
 
-    Пространство $(\Omega, \FF, \PP)$ \textit{дискретно}, если $\Omega$ не более, чем счётно. $\FF=\Rho(\Omega)$, элементы $\{\omega\}$ также считаем событиями.
+    Пространство $(\Omega, \FF, \PP)$ \hypertarget{n2}{\textcolor{cyan}{\textit{дискретно}}}, если $\Omega$ не более, чем счётно. $\FF=\Rho(\Omega)$, элементы $\{\omega\}$ также считаем событиями.
     \begin{stat}
         Несколько предложений:
 
         \begin{itemize}
             \item Пусть $\PP$ - вероятность в $(\Omega, \FF, \PP)$. Тогда $\PP(A)=\sum_{\omega\in A}p_\omega$, где $p_\omega=\PP\{\omega\}$. При этом $p_\omega\geq 0$, $\sum_\omega p_\omega = 1$. 
-            \item Предположим, что $\{p_\omega\}_{\omega\in\Omega}$ такие, что выполнено последнее предложение предыдущего пункта, тогда ?
+            \item Предположим, что $\{p_\omega\}_{\omega\in\Omega}$ такие, что выполнено последнее предложение предыдущего пункта, тогда $\PP(A)=\sum_{\omega\in A}p_\omega$ - вероятность.
         \end{itemize}
     \end{stat}
 \end{exl}
+
+Также, можно упомянуть про \hypertarget{n3}{\textcolor{cyan}{\textit{равновероятные исходы}}}, из названия понятно, что это. Если $\vert \Omega\vert <\infty$ и $p_\omega=p$ для любого $\omega$, тогда $\PP(A)=\frac{\vert A\vert}{\vert \omega \vert}$. \ 
 
 Начнём теперь разбираться с понятием \textit{условная вероятность}.
 
@@ -155,10 +161,8 @@
 \end{exl}
 
 \begin{defn}
-    \textit{Условная вероятность}: $\PP_B(A)=\frac{\PP(A\cap B)}{\PP(B)}$ (при $\PP(B)>0$).
+    \hypertarget{n4}{\textcolor{cyan}{\textit{Условная вероятность}}}: $\PP_B(A)=\frac{\PP(A\cap B)}{\PP(B)}$ (при $\PP(B)>0$).
 \end{defn}
-
-(тут два каких-то утверждения)
 
 \begin{stat}
     Для условной вероятности выполнены аксиомы вероятности.
@@ -177,17 +181,20 @@
 \end{proof}
 
 \begin{stat}
-    \textit{Формула Байеса}. Пусть мы знаем событие $A$, имеется разбиение $(B_n)$, тогда 
+    \hypertarget{n5}{\textcolor{cyan}{\textit{Формула Байеса}}}. Пусть мы знаем событие $A$, имеется разбиение $(B_n)$, тогда 
     \[
     \PP_A(B_k)=\frac{\PP(A\cap B_k)}{\PP(A)}=\frac{\PP(B_k)\PP_{B_k}(A)}{\sum_n\PP(B_n)\PP_{B_n}(A)}
     \]
 \end{stat}
 
 \begin{stat}
-    \textit{Формула умножения}. -//-
+    \hypertarget{n6}{\textcolor{cyan}{\textit{Формула умножения}}}. 
+    \[
+        \PP(\bigcap_1^n A_k)=\PP(A_1)\cdot \PP_{A_1}(A_2)\cdot\PP_{A_1\cap A_2}(A_3)\cdot\ldots
+    \]
 \end{stat}
 
-Перейдём к \textit{Независимости событий}. Начнём рассуждения с двух событий: $A$ и $B$. Если $\PP(B)=\PP_A(B)$, $\PP(A)=\PP_B(A)$, или, что равносильно им обоим $\PP(A\cap B)=\PP(A)\PP(B)$, то события называются \textit{независимыми}.\ 
+Перейдём к \textit{независимости событий}. Начнём рассуждения с двух событий: $A$ и $B$. Если $\PP(B)=\PP_A(B)$, $\PP(A)=\PP_B(A)$, или, что равносильно им обоим $\PP(A\cap B)=\PP(A)\PP(B)$, то события называются \textit{независимыми}.\ 
 
 Пусть теперь имеется не два, а больше событий $\{A_q, \ldots, A_n\}$. Нельзя сказать, что нам хватает попарной независимости для независимости совокупной.
 
@@ -205,7 +212,7 @@
 Таким образом, нужно ввести корректное определение.
 
 \begin{defn}
-    События $A_1, \dots, A_n$ независимы, если выполнено:
+    События $A_1, \dots, A_n$ \hypertarget{n7}{\textcolor{cyan}{\textit{независимы}}}, если выполнено:
     \begin{align*}
         \PP(A_i\cap A_j)&=\PP(A_i)\PP(A_j), \: \forall i\neq j,  \\ 
         \PP(A_i\cap A_j\cap A_k)&=\PP(A_i)\PP(A_j)\PP(A_k), \: \forall i\neq j\neq k,  \\
@@ -214,33 +221,79 @@
     \end{align*}
 \end{defn}
 
-(какая-то теорема)
+\begin{theorem}
+    Пусть имеется $T_1, \ldots, T_m$ - разбиение $\{1, \ldots, n\}$, независимые события $A_1, \ldots, A_n$, $\{B_j\}_m$ - комбинация (всякие действия между элементами) событий $\{A_s, s\in T_j\}$. Тогда $\{B_j\}$ - независимы.
+\end{theorem}
+
+\begin{proof}
+    По индукции.
+\end{proof}
 
 \begin{defn}
-    \textit{Случайная величина} - это функция $X:\Omega\rightarrow R$. 
+    \hypertarget{n8}{\textcolor{cyan}{\textit{Случайная величина}}} - это функция $X:\Omega\rightarrow R$. 
 \end{defn}
 
 \begin{exl}
     Число выпавших решек на $n$ бросках.
 \end{exl}
 
-Теперь немного о \textit{распределении случайной величины}. Пусть имеется вероятностное пространство и случайная величина $X$. Нас интересует $\{\omega\vert X(\omega)\in B\}$, то есть, мы хотим исследовать попадания случайной величины в те или иные зоны на прямой. Такую вероятность можно рассматривать как вероятность от множества $B$, но это слишком сложно, поэтому продолжим на таких двух пунктах:
+Теперь немного о \textit{распределении случайной величины}. Пусть имеется вероятностное пространство и случайная величина $X$. Нас интересует $\{\omega\vert X(\omega)\in B\subseteq \RR \}$, то есть, мы хотим исследовать попадания случайной величины в те или иные зоны на прямой. Такую вероятность можно рассматривать как вероятность от множества $B$, но это слишком сложно, поэтому продолжим на таких двух пунктах:
 
 \begin{itemize}
     \item значения $X$, $X(\Omega)=\{a_1, \ldots\}$, $\{a_k\}$ - значение $X$, 
     \item $A_k=\{\omega\vert X(\omega)=a_k\}$; $p_k=\PP(A_k)$, причём каждая $p_k\geq0$, а их сумма равна единице.
 \end{itemize}
 
-Тогда мы можем сделать вывод, что $\PP\{X\in B\}=\sum_{k\vert a_k\in B}p_k$, но левая часть есть $\PP\{\bigcup_{k\vert a_k\in B}\}$, что равно $S$
+Тогда мы можем сделать вывод, что $\PP\{X\in B\}=\sum_{k\vert a_k\in B}p_k$, так как левая часть есть $\PP\{\bigcup_{k\vert a_k\in B}\}$, что равно $\PP\{\bigcup_{k\vert a_k\in B}\{x=a_k\}\}=\sum_{k\vert a_k\in B}\PP\{x=a_k\}$, что уже и равно левой части.\
+
+\begin{defn}
+    Таки образом, совокупность последовательностей $\frac{\{a_k\}}{\{p_k\}}$ и называется \hypertarget{n9}{\textcolor{cyan}{\textit{распеределением случайной величины}}}. 
+\end{defn}
 
 \begin{exl}
     Приведём примеры распределений:
 
     \begin{itemize}
         \item \textit{вырожденное}: $X(\omega)=a$ для любого $\omega$.
+        \item \textit{распределение Бернулли}: $B(1, p)$, $p\in[0,1]$, причём единица принимается с вероятностью $p$, $0$ - иначе.
+        \item \hypertarget{n10}{\textcolor{cyan}{\textit{биномиальное}}}: $B(n, o)$, $p\in[0,1]$, $X\sim B(n, p)$, если принимаются значения от $0$ до $n$, причём $\PP\{X=k\}=\PP_n(k)$ (просто обозначение), и равно $C_n^kp^k(1-p)^{n-k}$.
     \end{itemize}
 
-    (ещё несколько примеров над одописать)
 \end{exl}
+
+\newpage
+
+\hypertarget{t2}{И в заключение...}
+
+\section{Пофамильный указатель всех важных предметов}
+
+\begin{multicols}{2}
+    [
+    Быстрый список для особо ленивого поиска.
+    ]
+
+    \hyperlink{n1}{биномиальное распределение}\
+    
+    \hyperlink{n1}{вероятностное пространство}\
+    
+    \hyperlink{n2}{дискретное пространство}\
+
+    \hyperlink{n7}{независимые события}\
+
+    \hyperlink{n3}{равновероятные исходы}\
+
+    \hyperlink{n1}{распределение случайной величины}\
+
+    \hyperlink{n8}{случайная величина}\
+
+    \hyperlink{n4}{условная вероятность}\
+
+    \hyperlink{n5}{формула Байеса}\
+
+    \hyperlink{n6}{формула умножения}\
+
+
+
+\end{multicols}
 
 \end{document}
