--- a/lekcii/probtheory.tex
+++ b/lekcii/probtheory.tex
@@ -256,7 +256,7 @@
     \begin{itemize}
         \item \textit{вырожденное}: $X(\omega)=a$ для любого $\omega$.
         \item \textit{распределение Бернулли}: $B(1, p)$, $p\in[0,1]$, причём единица принимается с вероятностью $p$, $0$ - иначе.
-        \item \hypertarget{n10}{\textcolor{cyan}{\textit{биномиальное}}}: $B(n, o)$, $p\in[0,1]$, $X\sim B(n, p)$, если принимаются значения от $0$ до $n$, причём $\PP\{X=k\}=\PP_n(k)$ (просто обозначение), и равно $C_n^kp^k(1-p)^{n-k}$.
+        \item \hypertarget{n10}{\textcolor{cyan}{\textit{биномиальное}}}: $B(n, p)$, $p\in[0,1]$, $X\sim B(n, p)$, если принимаются значения от $0$ до $n$, причём $\PP\{X=k\}=\PP_n(k)$ (просто обозначение), и равно $C_n^kp^k(1-p)^{n-k}$.
     \end{itemize}
 
 \end{exl}
