--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -16,7 +16,7 @@
 \usepackage[usenames]{color}
 \hypersetup{
      colorlinks=true,
-     linkcolor=green,
+     linkcolor=magenta,
      filecolor=green,
      citecolor=black,      
      urlcolor=cyan,
@@ -54,6 +54,7 @@
 \DeclareMathOperator{\Tors}{Tors}
 \DeclareMathOperator{\Frac}{Frac}
 \DeclareMathOperator{\Imf}{Im}
+\DeclareMathOperator{\Real}{Re}
 \DeclareMathOperator{\cont}{cont}
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\ev}{ev}
@@ -170,4 +171,90 @@ $(x-y)$ - евклидово расстояние.
 \end{eqnarray*}
 
 Если $f_i$ непрерывна, то $f_i^2$ равномерно непрерывна. $f_i'^2(\xi_{i, k})\leq \min_{[x_k, x_{k+1}]}f_i'^2+\varepsilon^2$ (для достаточно мелких разбиений и любого эпсилон, большего нуля). Тогда можно получить верхнюю оценку: $\leq \sum_{k=0}^{n-1}(x_{k+1}-x_k)\sqrt{\sum_{l=1}^n \min_{[x_k]}(f_l'^2)}+\varepsilon \sqrt{n}(b-a)\leq \int_a^b\sqrt{\dots}+\varepsilon \sqrt{n}(b-a)$ (устремляем разбиение к бесконечно малому). А затем делаем аналогично снизу и получаем требуемое равенство.
+
+\section{Лекция 2.}
+
+Пусть $\varphi$ - функция, которая определялась на прошлой лекции, а $\psi$ - обратная ей. $\psi$ - биекция, рассматриваем $f\circ \psi$. Посмотрим на $\psi([0, \beta])=[a,b]$, тогда для любых $c, d\in [0, b]$ $V_{f\circ\psi}([c, d])=d-c$.
+
+
+
+Естественная параметризация гладкого пути практически не отличается от того, что мы уже рассматривали за одним небольшим исключением. 
+\[
+    \varphi(x)=V_f([a, x])=\int_a^x\vert f'(s)\vert ds=\int_a^x\sqrt{f_1'^2+\ldots+f_n'^2}ds,
+\]
+причём предпоследнее вырежение равно $\vert (f_1', \ldots, f_n')\vert$, а под корнем все функции от $s$. Рассмотрим опять $\psi$, и как выглядит вектор $f(\psi(x))=(f_1(\psi(x)), \ldots, f_n(\psi(x)))$, рассмотрим его производную, берём покоординатно: $f'(\psi(x))=(f_1'(\psi(x)), \ldots, f_n'(\psi(x)))$. Но $\psi'(x)=\frac{1}{\varphi(\psi(x))}$, тогда $\varphi(s)=\vert f'(s)\vert$, а также $\vert f'(\psi(x))\vert=1$.
+
+\begin{remark}
+    Если $f$ - гладкая на $[a, b)$ и существует $\int_a^b|f'(s)|ds$, тогда выполнено то же самое, просто $\varphi(x)=\int_z^x|f'(s)|ds$.
+\end{remark}
+
+Перейдём теперь к тригонометрии. Рассмотрим окружность $x^2+y^2=1$, мы планируем её обходить (то есть, через каждую точку по разу, с одинаковой скоростью, и так далее). Введём попутно также комплексное обозначение (мы не будем заниматься комплексным анализом, просто это удобно). Отождествим $\RR^2$ с $\CC$ понятно каким образом. Тогда какое вращение мы хотим? Мы хотим найти функцию $\Gamma:\RR\rightarrow \mathbb{T}=\{z:|z|=1 \text{ или } x^2+y^2=1, z=x+iy\}$, а хотим потребовать также следующее:
+
+\begin{itemize}
+    \item $\Gamma\in C^1$ (гладкая),
+    \item $\Gamma(0)=1, \: \Gamma'(0)=i$ (место старта и начальная скорость, с которой мы идём), 
+    \item $|\Gamma'(t)|=1$ для любого $t$ (постоянная скорость 1).
+\end{itemize}
+
+Сформулируем теорему:\\
+
+\begin{theorem}
+    Функция с данными свойствами существует и единственна.
+\end{theorem}
+
+\begin{proof}
+    $\Gamma(t)\in\mathbb{T}$ тогда и только тогда, когда $\Gamma(t)\overline{\Gamma(t)}=1$. Продифференцируем последнее, получим
+    \[
+        \Gamma'(t)\overline{\Gamma(t)}+\Gamma(t)\overline{\Gamma'(t)}=0, 
+    \]
+    что также равно 
+    \[
+        2\Real(\overline{\Gamma'(t)}\Gamma(t))=0.
+    \]
+    То есть, мы получили, что $\Gamma(t)\overline{\Gamma'(t)}=ih(t)$, $h(t)\in\RR$. Применим теперь оставшееся неиспользованное условие: $|\Gamma(t)|=1$, а чтобы параметризация была естественна, $|\Gamma(t|$ должно быть равно 1. То есть, $h(t)=\pm1$. Подставим теперь нуль и получим, что функция в этой точке должна быть равна единице, а производная - $i$. Тогда остаётся один вариант: $ h(t)\equiv 1$. \ 
+
+    Посмотрим теперь ещё раз на начальные уравнение: $\Gamma'(t)\overline{\Gamma(t)}\equiv i$, то есть, 
+    
+    \begin{equation}
+        \Gamma'(t)=i\Gamma(t).
+    \end{equation}
+    
+    Таким образом, мы уже пришли к тому, что если вращение существует, то оно должно удовлетворять последнему уравнению, а также $\Gamma(0)=1$. Это означает, что вращение, которое мы получаем, будет дифференцируемо бесконечно много раз. \ 
+
+    Пока что, казалось бы, ни единственности, ни существования, однако из последних утверждений легко получается единственность. Пусть у нас есть $\Gamma_{1,2}$ - два простых вращения. Дначит, они оба удовлетворяют (1). Тогда завайте запишем их частное через сопряжённые и возьмём производную: $ \biggl(\Gamma_1(t)\overline{\Gamma_2(t)}\biggr)'=\Gamma_1'(t)\overline{\Gamma_2(t)}+\Gamma_1(1)\overline{\Gamma_2'(t)}$, что равно $i\Gamma_1\overline{\Gamma_2}+\Gamma_1\overline{i\Gamma_2}=0$. \ 
+
+    Таким образом, мы получили, что $\Gamma_1\Gamma_2=\const$, но поскольку $\Gamma(0)=1$, то эта константа и равна единице. То есть, $\Gamma_1\overline{\Gamma_2}=1$, следовательно, эти функции равны, единственность доказана. \ 
+
+    Докажем теперь существование. Предъявим сначала произвольную параметрицацию окружности, а затем постараемся сделать в ней замену переменной, чтобы получить хорошую функцию (которая должна быть, конечно, гладкой). Давайте параметризуем верхнюю половину $\mathbb{T}$ самым естественным образом: примем $x=t, \: y=\sqrt{1-t^2}, \ -1\leq t\leq 1$ (двигаемся по часовой стрелке). Теперь нам нужно отпараметризовать нижнюю половину, возьмём для этого $x=-t, \: y=-\sqrt{1-t^2}, \: -1\leq t\leq 1$, двигаться мы теперь будем по нижней половине, но в другом направлении, то есть, одну из половин нужно перевернутьт и ''склеить'' в один целостный проход. Тогда в нижней половине ''сдвинем'' рассмотрение на $1\leq t\leq 3$, и преобразуем: $y=-\sqrt{1-(2-t)^2}$. \ 
+
+    Осталось проверить, что полученная функция гладкая. Вообще, это почти везде очевидно, кроме $\pm 1$, это и проверим. $f(t)=(t, \sqrt{1-t^2})$, а вектор $f'(t)=(1, \frac{-t}{\sqrt{1-t^2}})$. Функция $\varphi(x)$ на $(-1, 1)$ выглядит как
+    \[
+        \int_{-1}^x|f'(s)|ds=\int_{-1}^x\sqrt{1+\frac{t^2}{1-t^2}}dt=\int_-1^x\frac{dt}{\sqrt{1-t^2}}.
+    \]
+    Функция $\varphi(x)$ - возрастающая биекция, значит, мы можем посмотреть на обратную функцию $\psi(x)=\varphi^-1(x)$. Рассмотрим теперь для $x\in(-1, 1)$,
+    \[
+         (f^{-1}(\psi(x)))'=(f_1'(\psi(x))\psi'(x), f_2'(\psi(x))\psi'(x)).
+    \]
+    Тогда, так как $\psi'(x)=\frac{1}{\varphi'(\varphi(x))}$, это также и равно $\sqrt{1-\psi^2(x)}$, что также равно 
+    \[
+    (\psi'(x), \frac{-\psi(x)}{\sqrt{1-\psi(x)}}\sqrt{1-\psi^2(x)}).
+    \]
+    В последнем также можно сократить числитель и знаменатель. Итого, $f(\psi(x))$ - гладкая на $(-1, 1)$, и более того, если $x\rightarrow\pm 1$, производная имеет конечный предел. Получается, дифференцируема на интервале, и производная имеет предел в крайних точках, тогда она в них также дифференцируема. Таким образом, для верхней половины мы всё показали, для нижней - аналогично, всего лишь с линейной заменой. \ 
+
+
+\end{proof}
+
+После доказательства теоремы, можно, наконец, ввести определения:
+
+\begin{defn}
+    \[
+        \cos(x)=\Real(\Gamma(x)), 
+    \]
+    \[
+        \sin(x)=\Imf(\Gamma(x)).
+    \]
+\end{defn}
+
+Далее уже можно поговорить о бесконечной дифференцируемомти и формуле Муавра, этим, вместе с доказательством, что мы нашли привычные функции, мы, кажется, и планируем заниматься далее.
+
 \end{document}
