--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -185,7 +185,7 @@ $(x-y)$ - евклидово расстояние.
 причём предпоследнее вырежение равно $\vert (f_1', \ldots, f_n')\vert$, а под корнем все функции от $s$. Рассмотрим опять $\psi$, и как выглядит вектор $f(\psi(x))=(f_1(\psi(x)), \ldots, f_n(\psi(x)))$, рассмотрим его производную, берём покоординатно: $f'(\psi(x))=(f_1'(\psi(x)), \ldots, f_n'(\psi(x)))$. Но $\psi'(x)=\frac{1}{\varphi(\psi(x))}$, тогда $\varphi(s)=\vert f'(s)\vert$, а также $\vert f'(\psi(x))\vert=1$.
 
 \begin{remark}
-    Если $f$ - гладкая на $[a, b)$ и существует $\int_a^b|f'(s)|ds$, тогда выполнено то же самое, просто $\varphi(x)=\int_z^x|f'(s)|ds$.
+    Если $f$ - гладкая на $[a, b)$ и существует $\int_a^b|f'(s)|ds$, тогда выполнено то же самое, просто $\varphi(x)=\int_a^x|f'(s)|ds$.
 \end{remark}
 
 Перейдём теперь к тригонометрии. Рассмотрим окружность $x^2+y^2=1$, мы планируем её обходить (то есть, через каждую точку по разу, с одинаковой скоростью, и так далее). Введём попутно также комплексное обозначение (мы не будем заниматься комплексным анализом, просто это удобно). Отождествим $\RR^2$ с $\CC$ понятно каким образом. Тогда какое вращение мы хотим? Мы хотим найти функцию $\Gamma:\RR\rightarrow \mathbb{T}=\{z:|z|=1 \text{ или } x^2+y^2=1, z=x+iy\}$, а хотим потребовать также следующее:
