--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -257,4 +257,90 @@ $(x-y)$ - евклидово расстояние.
 
 Далее уже можно поговорить о бесконечной дифференцируемомти и формуле Муавра, этим, вместе с доказательством, что мы нашли привычные функции, мы, кажется, и планируем заниматься далее.
 
+\section{Лекция 3.}
+
+Для начала, закончим с тригонометрией. Мы научились строить синус и косинус через вращение окружности. Немного не помню, обговаривали ли мы это на прошлой лекции, но Юрий Сергеевич кратуо цпомянул, что мы можем разложить $\Gamma(x)$ в ряд Тэйлора в $\sum_{n=0}^\infty\frac{(ix)^n}{n!}$ в силу свойства $\Gamma'(x)=i\Gamma(x)$ и того, что остаточный член в форме Лагранжа будет стремиться к нулю при стремлении $n$ к бесконечности. \ 
+
+Тогда 
+\[
+    \cos x = \Real \Gamma(x) \Rightarrow \sum_{n=0}^\infty\frac{x^{2n}}{(2n)!}(-1)^n
+\]
+и аналогично синус по нечётным степеням. \ 
+
+Мнимая экспонента обладает свойствами, аналогичным обыкновенной экспоненте, поэтому покажем, что $\Gamma(x+y)=\Gamma(x)\Gamma(y)$. Рассмотрим $\Gamma(x+y)\overline{\Gamma(y)}$ - функцию от $x$, а $y$ - параметр. Это - некоторый обход окружности, который также удовлетворяет всем нормировочным условиям. $\varphi(0)=1$, $|\varphi'(x|=1$, и, наконец, $\varphi'(0)=\Gamma'(0)= i$. \ 
+
+Теперь все прекрасные формулы косинуса и синуса суммы и разностей легко выводятся из доказанной формулы. Через мнимую экспоненту запишем: $e^{i(x+y)=e^{ix}\cdot e^{iy}}$, а там уже просто надо посмотреть на мнимые и действительные части. \ 
+
+Из полученных свойств получим, что $\Gamma(x)\Gamma(-x)=\Gamma(0=1)$, тогда $\Gamma(-x)=\overline{\Gamma(x)}$, откуда мы получаем чётность косинуса и нечётность синуса. \ 
+
+Можно упомянуть и формулу муавра. Распишем 
+\[
+    \cos(x)=\frac{e^{ix}+e^{-ix}}{2}, \: \sin(x)=\frac{e^{ix}-e^{-ix}}{2i}, 
+\]
+это формулы Муавра. Также можно получить и периодичность, это, вообщем-то очевидно и завершает наш разговор об элементарных функциях. \\
+
+Перейдём теперь к многочерному анализу. Мы бы хотели точно также уметь анализировать функции и делать всё то, что мы уже умеем делать для одномерных функций, в том числе, решать экстремальные задачи. Нас интересуют функции $f:\RR^m\rightarrow \RR^n$. \ 
+
+Начнём с того, что в евклидовом пространстве $\RR^m$ расстояние задаётся как 
+\[
+    d(x, y)=\sqrt{\sum_{k=1}^m(x_k-y_k)^2}=||x-y||.
+\]
+И если у нас имеется точка $x=(x_1, \ldots, x_m)$, то её норма есть $||x||=\sqrt{\sum_{k=1}^mx_k^2}$. Вообще, норму можно задать как угодно, если она удовлетворяет таким свойствам: 
+
+\begin{itemize}
+    \item норма - функция $\RR^m\rightarrow \RR_{+, 0}$, 
+    \item $||x||=0 \: \Leftrightarrow \: x\equiv (0,\ldots, 0)$, 
+    \item $||\alpha x||=|\alpha|\cdot||x||$, $\alpha\in \RR$, 
+    \item $||x+y||\leq ||x||+||y||$. 
+\end{itemize}
+
+Разберёмся с понятием \textit{гладкости}. Для начала, алгебраически. Пусть у нас есть функция нескольких переменных $f:\RR^m\rightarrow \RR$, $f(x_1, \ldots, x_m)$. 
+
+\begin{defn}
+    $f$ \textit{дифференцируема} в точке $(x_1, \ldots, x_m)$, если $f(y)=f(x)+L(y-x)+o(||x-y||)$, где $L$ - линейное отображение $\RR^m\rightarrow \RR$, причём однородное, то есть, $L(0)=0$. 
+\end{defn}
+
+\begin{defn}
+    Это линейное отображение $L$ называется \textit{дифференциалом} в точке $x$.
+\end{defn}
+
+На топологии мы доказывали, что в конечномерном пространстве различные норма липшицево-эквивалентны, потому мы просто во всех рассуждениях будем испоьзовать именно евклидовы нормы, потому что они удобные. А теперь перейдём к базовым свойствам. 
+
+\begin{remark}
+    $L$ - единственно.
+\end{remark}
+
+\begin{remark}
+    Если у нас есть две функции: $f$ и $g$, то дифференциал $\alpha f+\beta g$, $\alpha, \: \beta \in \RR$ есть $\alpha L_1+\beta L_2$, где $L_1$ и $L_2$ - дифференциалы $f$ и $g$. 
+\end{remark}
+
+Рассмотрим теперь отображение общего вида: $f:\RR^m\rightarrow \RR^n$. Тогда 
+\begin{defn}
+    (Гладкость). $f(y)=f(x)+L(y-x)+o(||x-y||)$, где $L$ - линейное отображение $\RR^m\rightarrow \RR^n$, $L(x+y)=L(x)+L(y)$. $o$-малое в данном случае можно понять как 
+    \[
+        \frac{f(y)-f(x)-L(y-x)}{||y-x||}\rightarrow 0,
+    \]
+    то есть, элемент $\RR^n$ стремится у нулю, но для удобства можно взять евклидову норму этого выражения.
+\end{defn}
+
+Какой вид имеет общее линейное отображение из $\RR^m\rightarrow \RR^n$? Естественно, это - матрица, это мы знаем из алгебры и умеем расписывать переход в тривиальном базисе. \ 
+
+Перейдём к свойствам линейных отображений. Мы умеем их складывать, умножать, а также, совершать композиции в случае согласованности размерностей, которая соответствует перемножению матриц. \ 
+
+Пусть теперь, опять же, у нас есть отображение $L: \RR^m\rightarrow \RR^n$, то $L(\RR^m)\subset \RR^n$ - подпространство, которое имеет размерность от $0$ до $n$, эту размерность мы понимаем как \textit{ранг} линейного отображения. Если же мы берём композицию линейных отображений, то ранг не может вырасти (куда растягивать-то). Также, легоко видеть, что если $m<n$, то $\dim(L(\RR^m))\leq m<n$. \ 
+
+Зададимся теперь вопросом, какая существует естественная метрика на линейных отображениях $\RR^m\rightarrow \RR^n$. По сути, эти линейные отображения представляют собой евклидово пространство размерности $m\cdot n$. Задать на нём мы можем евклидову метрику: под корнем будут квадраты всех матричных элементов. Эта норма вычисляется проще, но зато гораздо менее естественна, чем следующая (например, относительно вопроса о композиции). $||L||=\sup_{||x||<1}||Lx||$, $x\in \RR^m$, $LX\in \RR^n$. Эта вещь конечна, так как она не превосходит $\sum_{k=1}^m ||Le_k||$, а также выполняются все свойства нормы. \ 
+
+Геометрический смысл у данной нормы очень простой: мы смотрим, насколько сильно она растягивает расстояние в зависимости от направления. \ 
+
+Завершаем лекцию несколькими переопределениями нормы: 
+\begin{itemize}
+    \item $\sup_{||x||<1}||Lx||$, 
+    \item $\sup_{||x||\leq 1}||Lx||$, 
+    \item $\sup_{||x||\neq 0}\frac{||Lx||}{||x||}$, 
+    \item $\sup_{||x||<=}||Lx||$.
+\end{itemize}
+
+
+
 \end{document}
