--- a/lekcii/algebra_2.tex
+++ b/lekcii/algebra_2.tex
@@ -69,6 +69,9 @@
 \DeclareMathOperator{\ord}{ord}
 \DeclareMathOperator{\adj}{adj}
 \DeclareMathOperator{\Ann}{Ann}
+\DeclareMathOperator{\Real}{Re}
+\DeclareMathOperator{\Res}{Res}
+\DeclareMathOperator{\disc}{disc}
 
 \begin{document}
 
@@ -442,6 +445,90 @@ F[t]/(t^{k_1})\oplus F[t]/(t^{k_2})\oplus\ldots\oplus F[t]/(t^{k_m}), \: k_1\leq
 
 Таким образом, если $v$ - собственный вектор, отвечающий $\lambda$, то $\bar{v}$ - собственный вектор, отвечающий $\bar{\lambda}$, и со степенью, конечно, то же самое: $(A-\lambda I)^iv=0$, тогда $\overline{(A-\lambda I)^i}\bar{v}=0=(A-\bar{\lambda} I)^iv$. То есть, вся эта прямая сумма относительно $\lambda$ и его сопряжённого, будет устойчивой относительно нашей полуинволюции. Мы знаем, что вещественное векторное пространство это то же самое, что и комплексное с полуинволюцией, тогда все пары $\lambda_i$ и их сопряжённый будут объединяться в пары и давать вещественные подпространства. 
 
+\section{Лекция 33.}
 
+В прошлый раз мы рассматривали $V$ - векторное пространство над полем вещественных чисел и какой-то оператор $A: V\rightarrow V$, а также его комплексификацию $V_{\CC}$ и переход от одного к другому брагодаря полулинейному отображению. \ 
+
+$V$ над вещественными разбивается в сумму пространств, часть из них соответствует вещественным корням, а часть - мнимым. 
+\[
+    V=\oplus_{\lambda=\bar{\lambda}}V_\lambda^{\RR}\oplus_{\lambda\neq\bar{\lambda}}V_{{\lambda, \bar{\lambda}}}^{\RR}.
+\]
+
+Как выглядит ограничение оператора $A$ на эти подпространства? Давайте начнём с какого-то жорданового блока (для начала, случай $\lambda\neq \bar{\lambda}$). Обозначим базис данной жордановой формы $v_1, \ldots, v_k$, тогда 
+
+\begin{align*}
+    A_{\CC}v_1&=\lambda v_1+v_2, \\
+    A_{\CC}v_2&=\lambda v_2+v_3, \\
+    &\vdots \\
+    A_{\CC}v_{k-1}&=\lambda v_{k-1}+v_k, \\
+    A_{\CC}v_k&=\lambda v_k.
+\end{align*}
+
+Что плохо в эитх векторах, почему их нельзя спустить до нашего пространства над вещественными? Они могут быть не инвариантны относительно инволюции. Применим ко всему, кроме $A_{\CC}$ черту. Это означает, что в пару к данному жордановому блоку идёт другой жорданов блок, базис которого соответственно сопряжён изначальному, а на диагонали стоят $\bar{\lambda}$. Пусть теперь у нас есть $v_1$ и $\overline{v_1}$. Чтобы получить вектор, инвариантный относительно инволюции, надо их сложить. Также можно вычесть и умножить на $i$, нетрудно проверить, что эта вещь также будет инвариантна относительно инволюции. \ 
+
+И теперь возьмём прямую сумму тех самых парных пространств, но сделаем замену базиса на $v_j+\bar{v_j}, i(v_j-\bar{v_j})$ по всем $j$. Несложно просерить, что это также базис, однако теперь все его элементы инвариантны относительно инволюции, а значит, просто ''живут'' в самом $V$. Осталось переписать матрицу $A$ в новом базисе. Тут какая-то муть с вычислениями, в итоге получается
+
+\begin{equation*}
+    \begin{pmatrix}
+        \Real(\lambda) & -\Imf(\lambda) \\
+        \Imf(\lambda) & \Real{\lambda}
+    \end{pmatrix}
+\end{equation*}
+
+- расставлены по диагонали квадратиками $2\times 2$, а под каждым из них - единичные матрички $2\times2$. \ 
+
+Кстати, $\CC\leq M_2(\RR)$ посредством перехода $\lambda$ в такие матрицы. Теперь пора перейти к случаю вещественного $\lambda$. \ 
+
+Возможны два варианта: $v_1$ и $\bar{v_1}$ могут быть либо линейно зависимы, либо линейно независимы (раньше-то они лежали в разных пространствах, а сейчас такое утверждать нельзя). В первом случае скажем, что $\bar{v_1}=\alpha v_1$. Тогда $\alpha$ может равняться чему-то на единичной окружности, так как из инволюции $\alpha \bar{\alpha}=1$. \\
+
+\begin{lemma}
+    (Простейший случай теоремы Гильберта 90). Если $\alpha \bar{\alpha}=1$, то существует $\beta$ такой, что $\alpha=\frac{\beta}{\bar{\beta}}$ (всё в $\CC$). 
+\end{lemma}
+
+Эта лемма была к рассуждению о том, что если $v_1\rightarrow \beta v_1$, то $\overline{\beta v_1}=\bar{\beta}\alpha v_1 = \bar{\beta}\frac{\alpha}{\beta}(\beta v_1)$, тогда мы и выбираем $\frac{\beta}{\bar{\beta}}=\alpha$. То есть, можем считать, что $v_1=\bar{v_1}$. \ 
+
+Но тогда $v_1$ лежит в нашем вещественном пространстве, и то, что им порождено, также лежит в этом пространстве ($v_1\in V$, $v_2=Av_1-\lambda v_1\in V$, и так далее). То есть, в этом случае, жорданов блок так и остаётся жордановым блоком в том же самом базисе. \ 
+
+Ну и, наконец, если $\langle v_1\rangle\neq\langle \bar{v_1}\rangle$ - сделаем то же, что и раньше, от того, комплексное $\lambda$ или вещественное, зависело только то, будет ли система базисом или нет. То есть, матрица состоит из блоков $2\times 2$ с $\lambda$ по диагонали, под которыми, опять-таки, единичные $2\times 2$. А если перенумеровать базис (сначала идут нечётные, а потом чётные), то просто получатся два жордановых блока одинакового размера. Окончательно, теорема такая: \\ 
+
+\begin{theorem}
+    Есть $V$, $A$, $\chi_A(t)$, корни которого есть $\lambda_i$ - мнимые и $\alpha_j$ - вещественные (причём, суммарно количество корней - размерность пространства, конечно же). Тогда в некотором базисе $A$ имеет вид блочный, состоящий из жордановых блоков, каждый из соответствующих комплексным $\lambda_i, \bar{\lambda_i}$ выглядит как квадратик $2\times 2$, вид которого был показан выше, под каждым из которых единичная матричка $2\times 2$, а что касается вещественных, они просто выглядят без изменений, обычная жорданова форма. 
+\end{theorem}\
+
+Вернёмся опять к ситуации алгебраически замкнутого поля. Мы говорили, что если $\chi_A(t)$ имеет различные корни $\lambda_i$, то $A$ диагонализируема и принимает вид - $n$ её корней по диагонали по порядку. Давайте поймём, когда все корни $f(t)\in K[t]$ в $\overline{K}$ различны. Мы уже знаем, что можно сказать, что требуемо соотношение $НОД(f(t), f'(t))=1$, но мы хотим переписать это в каком-то более явном виде многочлена от коэффициентов. Пусть у нас есть $f(t)$ и $g(t)$, $\deg(t)=n$, $\deg(g)=m$. Как узнать по коэффициентам $f$ и $g$, когда их $НОД$ есть единица. Так мы перешли к теме \textit{результанты}. \ 
+
+Для начала, немного в общих чертах. Если $НОД=1$, то существуют $p, \: q$: $pf+qg=1$. Давайте расссмотрим гомоморфизм $F[t]\times F[t]\rightarrow F[t]$, действующий по правилу $(p, q)\rightarrow pf+qg$. Это $F$-линейное отображение (не гомоморфизм колец), причём единица представляется тогда и только тогда, когда оно сюръективно. Критерий хороший, плохо только то, что трудно проверить сюръективность. \ 
+
+Рассмотрим $F[t]/(g)\oplus F[t]/(f)\rightarrow F[t]/(fg)$ по формуле $([p], [q])\mapsto ([pf+qg])$. Необходимо, конечно, проверить корректность этого отображения (но это - в запись, если интересно). Размерность пространств из отобажения - $m+n$ у обоих. Тогда матрица отображения квадратная, и сюръективность отображения контроллируется определителем. Осталось выписать матрицу отображения в каком-то базисе. Пусть $f=a_nt^n+\ldots+a_0$, $g=b_mt^m+\ldots+b_0$. Тогда в базисах - степенях $t$ от нулевой до $n$-ой, $m$-ой и $n+m$-ой соответственно, матрица так и выглядит:
+
+\begin{equation*}
+    \begin{pmatrix}
+        a_0 & 0 & 0 & \ldots & 0 & b_0 & 0 & \ldots & 0 \\
+        a_1 & a_0 & 0 & \ldots & 0 & b_1 & b_0 & \ldots & 0 \\
+        a_2 & a_1 & a_0 & \ldots & 0 & b_2 & b_1 & \ldots & 0 \\
+        \vdots & \vdots & \vdots & \ddots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        a_n & a_{n-1} & a_{n-2} & \ldots & a_i & \vdots & \vdots & \ddots & \vdots \\
+        0 & a_n & a_{n-1} & \ldots & a_{i+1} & b_m & b_{m-1} & \ldots & b_j \\
+        0 & 0 & a_n & \ldots & a_{i+2} & 0 & b_m & \ldots & b_{j+1} \\
+        \vdots & \vdots & \vdots & \ddots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & 0 & 0 & \ldots & a_n & 0 & 0 & \ldots & b_m
+    \end{pmatrix}
+\end{equation*}
+
+И чуть менее легко, чем её написание, мы можем найти её определитель, который и называется \textit{результантом} $f$ и $g$ (как многочлен). Таким образом, сформулируем теорему: \\ 
+
+\begin{theorem}
+    $НОД(f, g)=1\Leftrightarrow \Res (f, g)\neq 0$
+\end{theorem}
+
+\begin{cons}
+    $f$ не имеет кратных корней в $\bar{F}$ тогда и только тогда, когда $\Res(f, f')\neq 0$. И, кстати, если определить \textit{дискриминант} в общем случае: $\disc(f)=\frac{\Res(f, f')}{a_n}$, то можно говорить, что дискриминант не равен нулю.
+\end{cons}
+
+Таким образом, мы узнали, что кратность еорней контроллируется каким-то многочленом, которых зависит от коэффициентов изначальных многочленов. Благодаря принципу продолжения алгебраических тождеств можно перейти к \textit{плотности диагонализируемых матриц}. Каков принцип? Пусть, имеются матрицы $n\times n$, хотим проверить, что какой-то многочлен от коэффициентов равен нулю $P(a_{ij})=0$ - хотим проверить (например, мы хотим доказать теорему Гамильтона-Кэли: $\chi_A(A)=0$). Мы хотим, чтобы многочлен принимал значение нуль также и при коэффициентах сопряжённой матрицы. Тогда достаточно это проверять только для диагональных матриц - если это выполнено для диагональных, то выполнено и для всех. \ 
+
+(сюда можно пару чертежей пояснения перенести)\ 
+
+Почему этот принцип верен? Перейдём сначала к $\bar{K}$, затем рассмотрим $\disc(\chi_A(t))$. Тогда если дискриминант не равен нулю, то матрица диагонализуема, то есть, сопряжена с диагональной, а тогда многочлен $P$ на ней обнуляется. То есть, если дискриминант не равен нулю, то $P=0$, применяем принцип продолжения и получим, что $P$ тождественно равен нулю. Сам принцип - по сути тавтология, просто надо умножить $P$ на дискриминант, это всегда нуль, тогда и получаем, что требовалось.
 
 \end{document}
